tests/error/modifier_errors/flag_control_qubit1.py
from guppylang import qubit
from guppylang import guppy
from guppylang.std.builtins import dagger

@guppy
def test() -> None:
    with dagger:
        x = qubit()


test.compile()
